# Lima-camera-hamamatsu

./: CMakeLists.txt  README.md  pom.xml  pom_64_Win11_shared.xml  pom_64_Win7_shared.xml  pom_64_win_shared.xml
dcamsdk4/: .gitignore
dcamsdk4/samples/: samplesdcam_en.html  samplesdcam_ja.html
dcamsdk4/samples/cpp/access_image/: access_image.vcxproj
dcamsdk4/samples/cpp/attach_imagebuf/: attach_imagebuf.vcxproj.filters
dcamsdk4/samples/cpp/attach_metadatabuf/: attach_metadatabuf.sln
dcamsdk4/samples/cpp/binning_subarray/: binning_subarray.sln  binning_subarray.vcxproj  binning_subarray.vcxproj.filters
dcamsdk4/samples/cpp/control_calibration/: control_calibration.sln  control_calibration.vcxproj  control_calibration.vcxproj.filters
dcamsdk4/samples/cpp/copymetadata/: copymetadata.cpp  copymetadata.vcxproj  copymetadata.vcxproj.filters
dcamsdk4/samples/cpp/framebundle/: framebundle.sln  framebundle.vcxproj  framebundle.vcxproj.filters
dcamsdk4/samples/cpp/imageproc_option/: imageproc_option.sln  imageproc_option.vcxproj  imageproc_option.vcxproj.filters
dcamsdk4/samples/cpp/init_uninit/: init_uninit.sln  init_uninit.vcxproj
dcamsdk4/samples/cpp/live_average/: live_average.vcxproj
dcamsdk4/samples/cpp/misc/: console4.h
dcamsdk4/samples/cpp/open_show_modelinfo/: open_show_modelinfo.vcxproj
dcamsdk4/samples/cpp/recording/: recording.vcxproj  recording.vcxproj.filters
dcamsdk4/samples/cpp/setdata_region/: setdata_region.sln  setdata_region.vcxproj.filters
dcamsdk4/samples/cpp/software_trigger/: software_trigger.sln  software_trigger.vcxproj
dcamsdk4/samples/cpp/splitview/: splitview.vcxproj  splitview.vcxproj.filters
dcamsdk4/samples/cpp/unpack_mono12/: unpack_mono12.sln  unpack_mono12.vcxproj
dcamsdk4/samples/cs/csAcq4/: csAcq4.vs2008.sln  dcamapi4.cs
dcamsdk4/samples/cuda/cuda_live_attach/: cuda_live_attach.sln
dcamsdk4/samples/mfc/ExCap4/: DlgDcamAbout.cpp  ExCap4.rc  ExCap4.sln  ExCap4.vc15.vcxproj  ExCap4.vc9.sln  ExCap4.vcproj  ExCap4.vcxproj  ExCapApp.cpp  ExCapDoc.cpp
dcamsdk4/samples/vbnet/vbAcq4/: MyDcam.vb  dcamapi4.vb  subacq4.vb  vbAcq4.vbproj  vbAcq4.vs2008.sln
doc/: index.rst
include/: HamamatsuBinCtrlObj.h  HamamatsuCamera.h  HamamatsuCompatibility.h  HamamatsuDetInfoCtrlObj.h  HamamatsuInterface.h  HamamatsuRoiCtrlObj.h  HamamatsuSyncCtrlObj.h
new-sdk/doc/api_reference/: dcamapi4_en.html  dcamapi4_ja.html  property_reference_en.html  property_reference_ja.html
new-sdk/doc/camera_properties/: propC10000-801_en.html  propC10000-801_ja.html  propC10000-A01_en.html  propC10000-A01_ja.html  propC10400-10FA_en.html  propC10400-10FA_ja.html  propC10600-10B_en.html  propC10600-10B_ja.html  propC10650-321_en.html  propC10650-321_ja.html  propC10650-461_en.html  propC10650-461_ja.html  propC10800-08FCM-C_en.html  propC10800-08FCM-C_ja.html  propC11090-22B_en.html  propC11090-22B_ja.html  propC11254-10B_en.html  propC11254-10B_ja.html  propC11440-10C_en.html  propC11440-10C_ja.html  propC11440-22CU_en.html  propC11440-22CU_ja.html  propC11440-36U_en.html  propC11440-36U_ja.html  propC11440-42U_en.html  propC11440-42U_ja.html  propC11440-50B_en.html  propC11440-50B_ja.html  propC11440-50U_en.html  propC11440-50U_ja.html  propC11440-52U_en.html  propC11440-52U_ja.html  propC11440-62U_en.html  propC11440-62U_ja.html  propC12200-321_en.html  propC12200-321_ja.html  propC12300-321_en.html  propC12300-321_ja.html  propC12741-03_en.html  propC12741-03_ja.html  (+22 more)
new-sdk/inc/: dcamapi4.h  dcamprop.h
new-sdk/samples/: samplesdcam_en.html  samplesdcam_ja.html
new-sdk/samples/cpp/access_image/: access_image.cpp  access_image.sln  access_image.vcxproj  access_image.vcxproj.filters
new-sdk/samples/cpp/attach_imagebuf/: attach_imagebuf.cpp  attach_imagebuf.sln  attach_imagebuf.vcxproj  attach_imagebuf.vcxproj.filters
new-sdk/samples/cpp/attach_metadatabuf/: attach_metadatabuf.cpp  attach_metadatabuf.sln  attach_metadatabuf.vcxproj  attach_metadatabuf.vcxproj.filters
new-sdk/samples/cpp/binning_subarray/: Makefile  binning_subarray.cpp  binning_subarray.sln  binning_subarray.vcxproj  binning_subarray.vcxproj.filters
new-sdk/samples/cpp/control_calibration/: control_calibration.cpp  control_calibration.sln  control_calibration.vcxproj  control_calibration.vcxproj.filters
new-sdk/samples/cpp/copymetadata/: copymetadata.cpp  copymetadata.sln  copymetadata.vcxproj  copymetadata.vcxproj.filters
new-sdk/samples/cpp/framebundle/: framebundle.cpp  framebundle.sln  framebundle.vcxproj  framebundle.vcxproj.filters
new-sdk/samples/cpp/imageproc_option/: imageproc_option.cpp  imageproc_option.sln  (+2 more)
sdk/msvc/include/: ccDefine.h  dcamapi.h  dcamapi3.h  dcamapix.h  dcamprop.h  dcimgapi.h
src/: HamamatsuBinCtrlObj.cpp  HamamatsuCamera.cpp  HamamatsuDCAMSDKHelper.cpp  HamamatsuDetInfoCtrlObj.cpp  HamamatsuInterface.cpp  HamamatsuRoiCtrlObj.cpp  HamamatsuSyncCtrlObj.cpp  Makefile
temp-new-sdk/doc/api_reference/: dcamapi4_en.html  dcamapi4_ja.html  property_reference_en.html
temp-new-sdk/doc/camera_properties/: propC10000-801_en.html  propC10000-801_ja.html  propC10000-A01_en.html  propC10000-A01_ja.html  propC10400-10FA_en.html  propC10400-10FA_ja.html  propC10600-10B_en.html  propC10600-10B_ja.html  propC10650-321_en.html  propC10650-321_ja.html  propC10650-461_en.html  propC10650-461_ja.html  propC10800-08FCM-C_en.html  propC10800-08FCM-C_ja.html  propC11090-22B_en.html  propC11090-22B_ja.html  propC11254-10B_en.html  propC11254-10B_ja.html  propC11440-10C_en.html  propC11440-10C_ja.html  propC11440-22CU_en.html  propC11440-22CU_ja.html  propC11440-36U_en.html  propC11440-36U_ja.html  propC11440-42U_en.html  propC11440-42U_ja.html  propC11440-50B_en.html  propC11440-50B_ja.html  propC11440-50U_en.html  propC11440-50U_ja.html  propC11440-52U_en.html  propC11440-52U_ja.html  propC12200-321_en.html  propC12200-321_ja.html  propC12300-321_en.html  propC12300-321_ja.html  propC12741-03_en.html  propC12741-03_ja.html  propC13440-20CU_en.html  propC13440-20CU_ja.html  (+18 more)
temp-new-sdk/samples/: samplesdcam_en.html  samplesdcam_ja.html
(+250 files in other folders)
